@@ -89,6 +89,11 @@ WriteMakefile(
         # build/test prereqs
         'Test::More'        => 0,
     },
+    META_MERGE          => {
+        resources       => {
+            repository  => "https://github.com/maddingue/Sys-Syslog.git",
+        },
+    },
     PL_FILES        => {},
     dist            => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean           => { FILES => 'Sys-Syslog-*' }, 
